--- a/TODO
+++ b/TODO
@@ -1,1 +1,5 @@
 # Make the drawing canvas automatically resize (set js event handler on window resize)
+# Javascript on enter for the studnet login
+# HTML pages for login, lecturer and 
+# Added a grid system
+# Added save picture to server for the canvas
